--- a/apps/base/infra-crowdsec/deploy/kustomization.yaml
+++ b/apps/base/infra-crowdsec/deploy/kustomization.yaml
@@ -7,7 +7,7 @@ labels:
   - includeSelectors: false
     pairs:
       app.kubernetes.io/name: crowdsec
-      app.kubernetes.io/version: v1.5.5-debian
+      app.kubernetes.io/version: v1.6.0-1-debian
 
 resources:
 - namespace.yaml
