--- a/apps/base/monitoring-release-watcher/deploy/config/watchers/app-infra-crowdsec.yaml
+++ b/apps/base/monitoring-release-watcher/deploy/config/watchers/app-infra-crowdsec.yaml
@@ -2,9 +2,8 @@ watchers:
   - type: docker_registry
     repo: registry-1.docker.io
     image: crowdsecurity/crowdsec
-    tag: v1.5.5-debian
+    tag: v1.6.0-1-debian
     includes:
-      - ^v[0-9]+\.[0-9]+\.[0-9]+-debian
+      - ^v[0-9]+\.[0-9]+\.[0-9]+(-[0-9]+)?-debian
     excludes:
-      - ^v1\.[0-4]\.
-      - ^v1\.5\.[0-4]-
+      - ^v1\.[0-6]\.
