--- a/apps/base/infra-kubernetes-dashboard/deploy/ingress.yaml
+++ b/apps/base/infra-kubernetes-dashboard/deploy/ingress.yaml
@@ -23,6 +23,6 @@ spec:
         pathType: Prefix
         backend:
           service:
-            name: kubernetes-dashboard
+            name: kubernetes-dashboard-kong-proxy
             port:
               number: 443
