--- a/apps/base/infra-kubernetes-dashboard/deploy/namespace.yaml
+++ b/apps/base/infra-kubernetes-dashboard/deploy/namespace.yaml
@@ -1,7 +1,7 @@
 apiVersion: v1
 kind: Namespace
 metadata:
-  name: kubernetes-dashboard
+  name: infra-kubernetes-dashboard
   labels:
     pod-security.kubernetes.io/enforce: restricted
     pod-security.kubernetes.io/audit: restricted
