--- a/apps/base/infra-kubernetes-metrics-server/deploy/manifests/components/autoscale/patch.yaml
+++ b/apps/base/infra-kubernetes-metrics-server/deploy/manifests/components/autoscale/patch.yaml
@@ -13,7 +13,17 @@ spec:
           resources:
             $patch: delete
         - name: metrics-server-nanny
-          image: registry.k8s.io/autoscaling/addon-resizer:1.8.14
+          securityContext: 
+            allowPrivilegeEscalation: false
+            readOnlyRootFilesystem: true
+            runAsNonRoot: true
+            runAsUser: 1000
+            seccompProfile:
+              type: RuntimeDefault
+            capabilities:
+              drop:
+                - ALL
+          image: registry.k8s.io/autoscaling/addon-resizer:1.8.19
           resources:
             limits:
               cpu: 40m
@@ -32,14 +42,14 @@ spec:
                   fieldPath: metadata.namespace
           command:
             - /pod_nanny
-            - --cpu=20m
+            - --cpu=0m
             - --extra-cpu=1m
-            - --memory=15Mi
+            - --memory=0Mi
             - --extra-memory=2Mi
             - --threshold=5
             - --deployment=metrics-server
             - --container=metrics-server
             - --poll-period=300000
             - --estimator=exponential
-            - --minClusterSize=10
+            - --minClusterSize=100
             - --use-metrics=true
