--- a/apps/base/infra-kubernetes-metrics-server/deploy/manifests/components/high-availability-1.21+/kustomization.yaml
+++ b/apps/base/infra-kubernetes-metrics-server/deploy/manifests/components/high-availability-1.21+/kustomization.yaml
@@ -1,6 +1,6 @@
-apiVersion: kustomize.config.k8s.io/v1beta1
-kind: Kustomization
-bases:
+apiVersion: kustomize.config.k8s.io/v1alpha1
+kind: Component
+components:
 - ../high-availability
 patches:
 - path: patch-pdb-version.yaml
