--- a/apps/base/monitoring-release-watcher/deploy/config/watchers/app-stream-jellyfin.yaml
+++ b/apps/base/monitoring-release-watcher/deploy/config/watchers/app-stream-jellyfin.yaml
@@ -2,7 +2,7 @@ watchers:
   - type: docker_registry
     repo: registry-1.docker.io
     image: jellyfin/jellyfin
-    tag: 10.8.13-amd64
+    tag: 10.8.13-1-amd64
     includes:
       - ^[0-9]+\.[0-9]+\.[0-9]+-amd64$
     excludes:
@@ -13,7 +13,7 @@ watchers:
     type: docker_registry
     repo: registry-1.docker.io
     image: library/python
-    tag: 3.12.1-alpine3.19
+    tag: 3.12.2-alpine3.19
     includes:
       - 3\.[0-9]+\.[0-9]+-alpine[0-9]+\.[0-9]+
     excludes:
