--- a/apps/base/monitoring-release-watcher/deploy/config/watchers/app-tool-miniflux.yaml
+++ b/apps/base/monitoring-release-watcher/deploy/config/watchers/app-tool-miniflux.yaml
@@ -3,24 +3,25 @@ watchers:
     type: docker_registry
     repo: ghcr.io
     image: miniflux/miniflux
-    tag: 2.0.51-distroless
+    tag: 2.1.1-distroless
     includes:
       - ^[0-9]+.[0-9]+.[0-9]+-distroless$
     excludes:
       - ^1\..*
-      - ^2.0.[0-9]-distroless$
-      - ^2.0.[0-4][0-9]-distroless$
+      - ^2\.0\..*-distroless$
+      - ^2\.1\.[0]-distroless$
   - name: Miniflux PostgreSQL
     type: docker_registry
     repo: registry-1.docker.io
     image: library/postgres
-    tag: 15.5-alpine3.19
+    tag: 15.6-alpine3.19
     includes:
       - ^[0-9]+\.[0-9]+-alpine[0-9]+\.[0-9]+
     excludes:
       - .*-alpine3\.1[0-8]
       - ^[0-9]\..*
       - ^1[0-4]\..*
+      - ^15\.[0-5]\..*
   - name: "Reminiflux Node"
     type: docker_registry
     repo: registry-1.docker.io
