--- a/apps/base/monitoring-prometheus-operator/deploy/operator/clusterRole.yaml
+++ b/apps/base/monitoring-prometheus-operator/deploy/operator/clusterRole.yaml
@@ -1,6 +1,11 @@
 apiVersion: rbac.authorization.k8s.io/v1
 kind: ClusterRole
 metadata:
+  labels:
+    app.kubernetes.io/component: controller
+    app.kubernetes.io/name: prometheus-operator
+    app.kubernetes.io/part-of: kube-prometheus
+    app.kubernetes.io/version: 0.71.2
   name: prometheus-operator
 rules:
 - apiGroups:
@@ -72,6 +77,13 @@ rules:
   - get
   - list
   - watch
+- apiGroups:
+  - ""
+  resources:
+  - events
+  verbs:
+  - patch
+  - create
 - apiGroups:
   - networking.k8s.io
   resources:
