--- a/ansible/install_infra/roles/crio/defaults/main.yml
+++ b/ansible/install_infra/roles/crio/defaults/main.yml
@@ -1,9 +1,4 @@
 ---
-crio_apt_repository_os: "Debian_12"
-# See in https://download.opensuse.org/repositories/devel:/kubic:/libcontainers:/stable:/cri-o:/
-# Use the full version (1.21:/1.21.4) and not just a major.minor (1.21) to make sure the package we're pinning will still be available
-crio_apt_repository_version: "1.28:/1.28.1"
-# See in https://download.opensuse.org/repositories/devel:/kubic:/libcontainers:/stable:/cri-o:/1.28:/1.28.1/Debian_12/
-crio_version: 1.28.1~0
-# See in https://download.opensuse.org/repositories/devel:/kubic:/libcontainers:/stable/Debian_12/
-crio_runc_version: 1.0.1~2
+crio_repo_version: v1.29
+# apt list -a cri-o
+crio_version: 1.29.2-1.1
