--- a/apps/base/monitoring-release-watcher/deploy/config/watchers/on-hosts.yaml
+++ b/apps/base/monitoring-release-watcher/deploy/config/watchers/on-hosts.yaml
@@ -12,11 +12,39 @@ watchers:
     release: v1.3.2
   - type: github_release
     repo: kubernetes/kubernetes
-    release: v1.28.2
+    release: v1.29.3
     excludes:
       - .*(alpha|beta|rc).*
       - v1\.[0-1][0-9]\..*
-      - v1\.2[0-7]\..*
+      - v1\.2[0-8]\..*
+  - type: github_release
+    repo: cri-o/cri-o
+    release: v1.29.2
+    excludes:
+      - .*(alpha|beta|rc).*
+      - v1\.[0-1][0-9]\..*
+      - v1\.2[0-8]\..*
+  - type: github_release
+    repo: kubernetes-sigs/kustomize
+    release: kustomize/v5.4.1
+    includes:
+      - kustomize/.*
+    excludes:
+      - .*(alpha|beta|rc).*
+  - type: github_release
+    repo: mozilla/sops
+    release: v3.8.1
+    excludes:
+      - .*(alpha|beta|rc).*
+      - v[0-2]\..*
+      - v3\.[0-7]\..*
+  - type: github_release
+    repo: viaduct-ai/kustomize-sops
+    release: v4.3.1
+    excludes:
+      - .*(alpha|beta|rc).*
+      - v[0-3]\..*
+      - v4\.[0-2]\..*
   - type: github_release
     repo: restic/restic
     release: v0.16.4
