--- a/apps/base/stream-jellyfin/deploy/kustomization.yaml
+++ b/apps/base/stream-jellyfin/deploy/kustomization.yaml
@@ -8,7 +8,7 @@ labels:
     pairs:
       app.kubernetes.io/name: jellyfin
       app.kubernetes.io/component: jellyfin
-      app.kubernetes.io/version: 10.8.13-1-amd64-custom
+      app.kubernetes.io/version: 10.9.3-custom
 
 generatorOptions:
  disableNameSuffixHash: true
