--- a/apps/base/monitoring-release-watcher/deploy/config/watchers/app-tool-paperless.yaml
+++ b/apps/base/monitoring-release-watcher/deploy/config/watchers/app-tool-paperless.yaml
@@ -3,33 +3,34 @@ watchers:
     type: docker_registry
     repo: ghcr.io
     image: paperless-ngx/paperless-ngx
-    tag: 2.7.2
+    tag: 2.8.6
     includes:
       - ^[0-9]+\.[0-9]+\.[0-9]+
     excludes:
       - .*(beta|rc).*
       - ^[0-1]\..*
-      - ^2\.[0-6]\..*
+      - ^2\.[0-7]\..*
   - name: "Paperless Redis"
     type: docker_registry
     repo: registry-1.docker.io
     image: library/redis
-    tag: 7.2.4-alpine3.19
+    tag: 7.2.5-alpine3.20
     includes:
-      - "[0-9]+\\.[0-9]+\\.[0-9]+.*alpine[0-9]+\\.[0-9][0-9]"
+      - ^[0-9]+\.[0-9]+\.[0-9]+.*alpine[0-9]+\.[0-9][0-9]
     excludes:
-      - .*alpine3\.1[0-8]
+      - .*alpine3\.1[0-9]
       - ^[0-6]\.
       - ^7\.[0-1]\.
+      - ^7\.2\.[0-4]-
   - name: Paperless PostgreSQL
     type: docker_registry
     repo: registry-1.docker.io
     image: library/postgres
-    tag: 15.6-alpine3.19
+    tag: 15.7-alpine3.20
     includes:
       - ^[0-9]+\.[0-9]+-alpine[0-9]+\.[0-9]+
     excludes:
-      - .*-alpine3\.1[0-8]
+      - .*-alpine3\.1[0-9]
       - ^[0-9]\..*
       - ^1[0-4]\..*
-      - ^15\.[0-5]\..*
+      - ^15\.[0-6]\..*
