--- a/apps/base/monitoring-blackbox-exporter/deploy/deployment.yaml
+++ b/apps/base/monitoring-blackbox-exporter/deploy/deployment.yaml
@@ -72,6 +72,7 @@ spec:
             drop:
             - ALL
           readOnlyRootFilesystem: true
+          runAsGroup: 65534
           runAsNonRoot: true
           runAsUser: 65534
         terminationMessagePath: /dev/termination-log
@@ -84,7 +85,7 @@ spec:
         - --secure-listen-address=:9115
         - --tls-cipher-suites=TLS_ECDHE_RSA_WITH_AES_128_GCM_SHA256,TLS_ECDHE_ECDSA_WITH_AES_128_GCM_SHA256,TLS_ECDHE_RSA_WITH_AES_256_GCM_SHA384,TLS_ECDHE_ECDSA_WITH_AES_256_GCM_SHA384,TLS_ECDHE_RSA_WITH_CHACHA20_POLY1305,TLS_ECDHE_ECDSA_WITH_CHACHA20_POLY1305
         - --upstream=http://127.0.0.1:19115/
-        image: registry.lan/blackbox-exporter-kube-rbac-proxy:v0.16.0
+        image: registry.lan/blackbox-exporter-kube-rbac-proxy:v0.17.1
         imagePullPolicy: IfNotPresent
         name: kube-rbac-proxy
         ports:
