--- a/apps/base/monitoring-node-exporter/deploy/daemonSet.yaml
+++ b/apps/base/monitoring-node-exporter/deploy/daemonSet.yaml
@@ -29,7 +29,7 @@ spec:
         - --collector.netclass.ignored-devices=^(veth.*|[a-f0-9]{15})$
         - --collector.netdev.device-exclude=^(veth.*|[a-f0-9]{15})$
         - --collector.textfile.directory=/var/lib/node_exporter/textfile_collector
-        image: registry.lan/node-exporter:v1.7.0
+        image: registry.lan/node-exporter:v1.8.1
         imagePullPolicy: IfNotPresent
         name: node-exporter
         readinessProbe:
@@ -75,7 +75,7 @@ spec:
           valueFrom:
             fieldRef:
               fieldPath: status.podIP
-        image: registry.lan/node-exporter-kube-rbac-proxy:v0.16.0
+        image: registry.lan/node-exporter-kube-rbac-proxy:v0.17.1
         imagePullPolicy: IfNotPresent
         name: kube-rbac-proxy
         ports:
@@ -117,6 +117,7 @@ spec:
         kubernetes.io/os: linux
       priorityClassName: system-cluster-critical
       securityContext:
+        runAsGroup: 65534
         runAsNonRoot: true
         runAsUser: 65534
         seccompProfile:
