--- a/apps/base/infra-crowdsec/deploy/agent/daemonSet.yaml
+++ b/apps/base/infra-crowdsec/deploy/agent/daemonSet.yaml
@@ -51,7 +51,7 @@ spec:
               - ALL
       containers:
       - name: agent
-        image: "registry.lan/crowdsec:v1.6.1-2-debian"
+        image: "registry.lan/crowdsec:v1.6.2-debian"
         imagePullPolicy: IfNotPresent
         envFrom:
         - configMapRef:
