--- a/apps/base/cluster-intel-gpu-plugin/deploy/daemonSet.yaml
+++ b/apps/base/cluster-intel-gpu-plugin/deploy/daemonSet.yaml
@@ -57,5 +57,10 @@ spec:
           path: /var/lib/kubelet/device-plugins
       imagePullSecrets:
       - name: docker-config
-      nodeSelector:
-        capability/gpu: 'intel'
+      affinity:
+        nodeAffinity:
+          requiredDuringSchedulingIgnoredDuringExecution:
+            nodeSelectorTerms:
+            - matchExpressions:
+              - key: capability/intel_gpu
+                operator: Exists
