--- a/apps/vagrant/monitoring-grafana/deploy/secret-generator.yaml
+++ b/apps/vagrant/monitoring-grafana/deploy/secret-generator.yaml
@@ -24,3 +24,4 @@ secretFrom:
   files:
   - secret/datasources/blocky_postgresql.yaml
   - secret/datasources/crowdsec_elasticsearch.yaml
+  - secret/datasources/loki.yaml
