Allow prometheus to read rules from any namespace

--- a/apps/base/monitoring-prometheus-operator/deploy/prometheus/prometheus.yaml
+++ b/apps/base/monitoring-prometheus-operator/deploy/prometheus/prometheus.yaml
@@ -34,10 +34,7 @@ spec:
       cpu: 100m
       memory: 1024Mi
   ruleNamespaceSelector: {}
-  ruleSelector:
-    matchLabels:
-      prometheus: k8s
-      role: alert-rules
+  ruleSelector: {}
   scrapeConfigNamespaceSelector: {}
   scrapeConfigSelector: {}
   securityContext:
