Configure calico ip autodetection

--- a/apps/base/cluster-calico/deploy/patches/calico-node-daemonSet-env.yaml
+++ b/apps/base/cluster-calico/deploy/patches/calico-node-daemonSet-env.yaml
@@ -9,9 +9,9 @@ spec:
       containers:
         - name: calico-node
           env:
-            # Skip wireguard interface
+            # Force the correct subnet
             - name: IP_AUTODETECTION_METHOD
-              value: skip-interface=wg.*,k8sbr*
+              value: cidr=1.2.3.4/5
             # The default IPv4 pool to create on startup if none exists. Pod IPs will be
             # chosen from this range. Changing this value after installation will have
             # no effect. This should fall within `--cluster-cidr`.
